# claude-code-slack-agent

./: .gitignore  Dockerfile  Makefile  README.md  config.example.yaml  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: cicd.yml
tests/: test_main.py
