[tool.poetry]
name = "claude-code-slack-agent"
version = "0.1.0"
description = "Slack bot for Claude Code"
authors = ["106- <segmentation-fault@yandex.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
slack-bolt = "^1.18.0"
pyyaml = "^6.0"
claude-code-sdk = "^0.0.13"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
ruff = "^0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
